documentation and moving functions around.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,12 +20,13 @@ Collate:
     'cramersV_matrix.R'
     'ctrv.R'
     'filter_levels.R'
+    'formatting_functions.R'
     'ggsurv.R'
     'glm_coefs.R'
     'glm_table.R'
     'levels_to_drop.R'
     'prettytable_autoindent.R'
-    'prettytable_functions.R'
     'reg_autoindent.R'
+    'summary_measures.R'
     'table_indents.R'
     'table_one.R'
