making summary measures available to user.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,12 @@ export(glm_table)
 export(iqr_fmt)
 export(levels_to_drop)
 export(mean_fmt)
+export(mean_sd)
 export(median_fmt)
+export(median_iqr)
+export(median_range)
 export(n_fmt)
+export(n_perc)
 export(p_cat_apprx)
 export(p_cat_exact)
 export(p_cont_nonnorm)
