--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Collate:
     'ctrv.R'
     'filter_levels.R'
     'formatting_functions.R'
+    'ggroc.R'
     'ggsurv.R'
     'glm_coefs.R'
     'glm_table.R'
