groups argument allows row groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(cramersV_matrix)
 export(ctrv)
 export(filter_levels)
 export(fmt.glm_table)
+export(fmt_auc)
+export(ggroc)
 export(ggsurv)
 export(glm_table)
 export(iqr_fmt)
