optional include overall table in stratified table.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(p_cont_norm)
 export(p_fmt)
 export(prettytable_autoindent)
 export(prop_fmt)
+export(qCut)
 export(range_fmt)
 export(reg_autoindent)
 export(sd_fmt)
